[gd_scene load_steps=20 format=3 uid="uid://cxov63np5ll0w"]

[ext_resource type="Script" path="res://Levels/PauseMenu/pause_menu.gd" id="1_3rcwf"]
[ext_resource type="Texture2D" uid="uid://bfrt4mxw3u3ju" path="res://Image/asset1/Wood and Paper UI/Prefabs/6.png" id="1_ix05y"]
[ext_resource type="Texture2D" uid="uid://drittuhrgbfcv" path="res://Image/asset1/Wood and Paper UI/Yellow Button/2.png" id="2_y4k0c"]
[ext_resource type="Texture2D" uid="uid://x1504ag82tpf" path="res://Image/asset1/Wood and Paper UI/Yellow Button/3.png" id="3_dludf"]
[ext_resource type="Texture2D" uid="uid://cxsxmigkvmq54" path="res://Image/asset1/Wood and Paper UI/Yellow Button/4.png" id="4_vb5fp"]
[ext_resource type="Texture2D" uid="uid://do1awguqwn32t" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Text/19.png" id="5_tlbev"]
[ext_resource type="Texture2D" uid="uid://chfij0i60c5vr" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Text/20.png" id="6_8nbau"]
[ext_resource type="Texture2D" uid="uid://cm2ocpl3sjalt" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Text/1.png" id="7_6xwvv"]
[ext_resource type="Texture2D" uid="uid://cmdwgowda5c8w" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Text/18.png" id="8_80nnf"]
[ext_resource type="Texture2D" uid="uid://c1n3eb8ji8dp6" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Text/5.png" id="9_7a12j"]
[ext_resource type="Texture2D" uid="uid://rkk6vqp3lo42" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Text/24.png" id="10_p0dll"]
[ext_resource type="Texture2D" uid="uid://b030f7w2cenb7" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Text/9.png" id="11_0suf5"]
[ext_resource type="Texture2D" uid="uid://ijga45kcf24f" path="res://Image/asset1/Wood and Paper UI/Small Text/Small Icons/10.png" id="13_f5rv1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e126y"]
texture = ExtResource("1_ix05y")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_riy4g"]
texture = ExtResource("2_y4k0c")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6kmmo"]
texture = ExtResource("3_dludf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1cqfl"]
texture = ExtResource("4_vb5fp")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ke4ww"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_thnx7"]
texture = ExtResource("13_f5rv1")

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3rcwf")

[node name="Menu" type="Panel" parent="."]
offset_right = 1020.0
offset_bottom = 652.0

[node name="Panel2" type="Panel" parent="Menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 268.0
offset_top = 67.0
offset_right = -252.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_e126y")

[node name="MarginContainer" type="MarginContainer" parent="Menu/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 68.0
offset_right = -56.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Panel2/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_riy4g")

[node name="MarginContainer2" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -10

[node name="Panel2" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6kmmo")

[node name="MarginContainer3" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -10

[node name="Panel2" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1cqfl")

[node name="Sprite2D" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/Panel2"]
position = Vector2(-122.5, 42)
scale = Vector2(7, 7)
texture = ExtResource("5_tlbev")

[node name="Sprite2D5" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/Panel2"]
position = Vector2(-83.5, 42)
scale = Vector2(7, 7)
texture = ExtResource("6_8nbau")

[node name="Sprite2D2" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/Panel2"]
position = Vector2(-46, 42)
scale = Vector2(7, 7)
texture = ExtResource("7_6xwvv")

[node name="Sprite2D3" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/Panel2"]
position = Vector2(-8.00001, 42)
scale = Vector2(7, 7)
texture = ExtResource("8_80nnf")

[node name="Sprite2D4" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/Panel2"]
position = Vector2(33, 42)
scale = Vector2(7, 7)
texture = ExtResource("6_8nbau")

[node name="Start" type="Button" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/Panel2"]
layout_mode = 0
offset_left = -184.0
offset_top = 4.0
offset_right = 93.0
offset_bottom = 78.0
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0.243137)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ke4ww")

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_riy4g")

[node name="MarginContainer2" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = -10

[node name="Panel2" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6kmmo")

[node name="MarginContainer3" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = -10

[node name="Panel2" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1cqfl")

[node name="Sprite2D" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
position = Vector2(-143, 42)
scale = Vector2(6, 6)
texture = ExtResource("8_80nnf")

[node name="Sprite2D2" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
position = Vector2(-110, 42)
scale = Vector2(6, 6)
texture = ExtResource("9_7a12j")

[node name="Sprite2D3" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
position = Vector2(-74, 42)
scale = Vector2(6, 6)
texture = ExtResource("5_tlbev")

[node name="Sprite2D4" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
position = Vector2(-41, 42)
scale = Vector2(6, 6)
texture = ExtResource("6_8nbau")

[node name="Sprite2D5" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
position = Vector2(-9.00002, 42)
scale = Vector2(6, 6)
texture = ExtResource("7_6xwvv")

[node name="Sprite2D6" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
position = Vector2(24, 42)
scale = Vector2(6, 6)
texture = ExtResource("8_80nnf")

[node name="Sprite2D7" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
position = Vector2(59, 42)
scale = Vector2(6, 6)
texture = ExtResource("6_8nbau")

[node name="Restart" type="Button" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2"]
layout_mode = 0
offset_left = -184.0
offset_top = 4.0
offset_right = 93.0
offset_bottom = 78.0
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0.243137)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ke4ww")

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_riy4g")

[node name="MarginContainer2" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = -10

[node name="Panel2" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6kmmo")

[node name="MarginContainer3" type="MarginContainer" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = -10

[node name="Panel2" type="Panel" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1cqfl")

[node name="Sprite2D" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer3/Panel2"]
position = Vector2(-103.5, 43)
scale = Vector2(7, 7)
texture = ExtResource("9_7a12j")

[node name="Sprite2D2" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer3/Panel2"]
position = Vector2(-62.5, 43)
scale = Vector2(7, 7)
texture = ExtResource("10_p0dll")

[node name="Sprite2D3" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer3/Panel2"]
position = Vector2(-24.5, 43)
scale = Vector2(7, 7)
texture = ExtResource("11_0suf5")

[node name="Sprite2D4" type="Sprite2D" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer3/Panel2"]
position = Vector2(16.5, 43)
scale = Vector2(7, 7)
texture = ExtResource("6_8nbau")

[node name="Exit" type="Button" parent="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer3/Panel2"]
layout_mode = 0
offset_left = -184.0
offset_top = 4.0
offset_right = 93.0
offset_bottom = 78.0
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0.243137)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ke4ww")

[node name="Button" type="Button" parent="."]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_top = 13.0
offset_right = -11.0
offset_bottom = 63.0
grow_horizontal = 0
theme_override_colors/icon_hover_color = Color(0.831373, 0.831373, 0.831373, 1)
theme_override_styles/pressed = SubResource("StyleBoxTexture_thnx7")
icon = ExtResource("13_f5rv1")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer3/Panel2/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer2/MarginContainer3/Panel2/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Menu/Panel2/MarginContainer/VBoxContainer/HBoxContainer3/MarginContainer3/Panel2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
